# prompt-kit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup-claude-config.sh
.claude/: CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.claude-sessions/: 2025-11-26-park-flywheel-v2-implementation-compressed.md  2025-11-26-tool-inefficiency-tracking-compressed.md  2025-11-28-claude-md-line-limit-update-compressed.md  2025-11-28-prompt-kit-refactor-compressed.md  2025-12-07-chrome-automation-docs-compressed.md  cross-repo-automation.md  knowledge-graph.yaml  lesson-index.yaml  metrics.yaml
architectures/: claude-intelligence-system.md
chrome-automation/: README.md  cli.mjs  package.json  strudel-control.mjs  strudel-play-file.mjs  strudel-play.mjs  strudel-restart-audio.mjs  strudel-write-and-play.mjs  take-screenshot.mjs
claude-config/: .gitignore  CLAUDE.md  README.md  REFERENCE.md  claude-code-features.md  settings.json.template  statusline-command.sh
docs/: agent-delegation-pattern.md  boundary-decomposition-guide.md  claude-code-best-practices.md  claude-code-docs-pattern.md  claude-code-features.md  claude-knowledge-architecture.md  containment-test.md  debugging-playbook.md  documentation-governance.md  execution-scaffolding.md  focus-htk.md  index.md  knowledge-module-template.md  mermaid-diagram-guide.md  private-public-skills.md  project-kickoff.md  smart-claude-context-template.md  solution-outline.md  writing-style-guide.md
experiments/: EXECUTIVE-SUMMARY.md  README.md  boundary-protocol-industry-comparison.md  (+1 more)
prompts/: README.md
(+66 files in other folders)
